fix reversions and add lepbase config
